--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+Drupal 7.60, 2018-10-18
+------------------------
+- Fixed security issues. See SA-CORE-2018-006.
 
 Drupal 7.xx, xxxx-xx-xx (development version)
 -----------------------
@@ -12,6 +15,7 @@ Drupal 7.xx, xxxx-xx-xx (development version)
 - PHP 7.2: Removed deprecated function each().
 - PHP 7.2: Avoid count() calls on uncountable variables.
 - PHP 7.2: Removed deprecated create_function() call.
+- PHP 7.2: Make sure variables are arrays in theme_links().
 - Fixed theme-settings.php not being loaded on cached forms
 
 Drupal 7.59, 2018-04-25
