--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,11 @@
+Drupal 7.85, 2022-01-12
+-----------------------
+- Fix session cookies for sites with different base_urls but a shared domain
+
+Drupal 7.84, 2021-12-13
+-----------------------
+- Hotfix for session cookie domain on www subdomains
+
 Drupal 7.83, 2021-12-01
 -----------------------
 - Initial support for PHP 8.1
